fix(ux): naprawa scrolowania tabeli po wywaleniu hard height z kontenera matki oraz deaktywacja klampa css dla max-width na rzucie z-index ktory zalamywal okno rzutu do szerokosci 0px przy otwarciu

--- a/css/developer.css
+++ b/css/developer.css
@@ -1015,6 +1015,7 @@ select.filter-select {
     display: none !important;
   }
   #main-view {
+    height: calc(100vh - 130px) !important;
     flex-direction: column;
     overflow: hidden;
   }
@@ -1027,6 +1028,8 @@ select.filter-select {
     top: 0 !important;
     left: 0 !important;
     width: 100vw !important;
+    max-width: 100vw !important;
+    min-width: 100vw !important;
     height: 100vh !important;
     z-index: 9999 !important;
     background: #f4f7f6 !important;
